# point-cloud-visualisation

./: .gitignore  README.md  cluster.py  data_io.py  detect_dl.py  interactive_viewer.py  io_utils.py  preprocess.py  prototyping.ipynb  pyproject.toml  requirements.txt  run.py  visualize.py
outputs/: detections_clustering.json  detections_dl.json
scripts/: interactive_viewer.py  parity_check_voxelization.py  smoke_test_voxelization.py  verify_pointpillars.py
