[project]
name = "point-cloud-visualisation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "numba>=0.65.0",
    "numpy>=2.4.4",
    "open3d>=0.19.0",
    "torch>=2.11.0",
]
